Implement semantic analysis for the Magma compiler
- Added SemanticAnalyzer class to perform semantic analysis on the AST.
- Introduced various data structures to hold analysis results, including expression types, variable bindings, and function symbols.
- Implemented methods for analyzing statements, expressions, function declarations, and scopes.
- Added support for intrinsic functions and function signatures.
- Created Token and TokenType classes to represent tokens and their types.
- Defined Type enum for representing variable types (I32, BOOL, VOID).
- Introduced VariableSymbol class to encapsulate variable information.
- Established AST structure with various statement and expression types.
- Removed obsolete FunctionSymbol and Token classes from the compiler package.
- Updated tests to reflect changes in the compiler's structure and error handling.